--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ input,input::placeholder,select,textarea,textarea::placeholder{font-family:Robot
 .flex-column{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}
 .flex-row{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row}
 .flex-wrap{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-wrap:row;flex-wrap:wrap}
-.container{max-width:900px;margin:0 auto}
+.container{max-width:100%;margin:0 auto}
 .page-cv .box-left{width: 35%;min-height: 800px;background: #2b3743;padding: 20% 14px 0;}
 .page-cv .box-right{width: 65%;min-height: 800px;background: #ededed;padding: 23% 16px 5%;}
 .page-cv .box-header{position: absolute;top: 2%;left: 0;right: 0;background: #51c2d5 ;height: 130px;padding: 25px 0 25px 35px;color: #fff;}
